--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FifthActivity" />
-        <activity android:name=".FourthActivity" />
-        <activity android:name=".ThirdActivity" />
-        <activity android:name=".SecondActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".test2.MainActivityTest2"></activity>
+        <activity android:name=".test1.FifthActivity" />
+        <activity android:name=".test1.FourthActivity" />
+        <activity android:name=".test1.ThirdActivity" />
+        <activity android:name=".test1.SecondActivity" />
+        <activity android:name=".test1.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
