I added new interface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myfamilyphotoalbum">
+    package="com.example.myfamilyphotoalbum" >
 
     <application
         android:allowBackup="true"
@@ -8,14 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
 
-        <activity android:name=".test1.FifthActivity"></activity>
+        <activity android:name=".test2.MainActivityTest3" >
+        </activity>
+        <activity android:name=".test1.FifthActivity" />
         <activity android:name=".test1.FourthActivity" />
         <activity android:name=".test1.ThirdActivity" />
         <activity android:name=".test1.SecondActivity" />
-        <activity android:name=".test1.MainActivity"/>
-        <activity android:name=".test2.MainActivityTest2">
+        <activity android:name=".test1.MainActivity" />
+        <activity android:name=".test2.MainActivityTest2" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
