I added new activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".test1.FifthActivity" />
+        <activity android:name=".test1.FifthActivity" >></activity>
+        <activity android:name=".MainActivityTest6"/>
         <activity android:name=".test1.FourthActivity" />
+        <activity android:name=".MainActivityTest5" />
         <activity android:name=".test1.ThirdActivity" />
-    <activity android:name=".MainActivityTest4"/>
+        <activity android:name=".MainActivityTest4" />
         <activity android:name=".test1.SecondActivity" />
-        <activity android:name=".test2.MainActivityTest3"/>
+        <activity android:name=".test2.MainActivityTest3" />
         <activity android:name=".test1.MainActivity" />
         <activity android:name=".test2.MainActivityTest2">
             <intent-filter>
