--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".test1.FifthActivity" >></activity>
-        <activity android:name=".MainActivityTest6"/>
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".test1.FifthActivity">
+            >
+        </activity>
+        <activity android:name=".MainActivityTest6" />
         <activity android:name=".test1.FourthActivity" />
         <activity android:name=".MainActivityTest5" />
         <activity android:name=".test1.ThirdActivity" />
